hphp/hack/test/typecheck/lambda/variadics/lambda_variadic_generic.php.exp
File "lambda_variadic_generic.php", line 40, characters 47-49:
No instance method `bar` in `C` (Typing[4053])
  File "lambda_variadic_generic.php", line 4, characters 19-21:
  Did you mean `foo` instead?
  File "lambda_variadic_generic.php", line 16, characters 37-37:
  This is why I think it is an object of type C
  File "lambda_variadic_generic.php", line 11, characters 29-29:
    via this generic `T`
  File "lambda_variadic_generic.php", line 3, characters 7-7:
  Declaration of `C` is here
File "lambda_variadic_generic.php", line 38, characters 19-19:
Wrong number of type arguments (expected 1, got 0) (Typing[4101])
  File "lambda_variadic_generic.php", line 9, characters 7-7:
  Definition is here
